kubernetes/apps/default/tautulli-ingress/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli-ingress
  namespace: default
spec:
  ports:
    - port: 8181
      name: http
      targetPort: 8181
      protocol: TCP
  type: LoadBalancer
  externalTrafficPolicy: Local
---
kind: Endpoints
apiVersion: v1
metadata:
  name: tautulli-ingress
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.136
    ports:
      - port: 8181
        name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: tautulli.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: tautulli-ingress
                port:
                  number: 8181
  tls:
    - hosts:
        - tautulli.${SECRET_DOMAIN}
      secretName: tautulli-tls
  ingressClassName: nginx
